[project]
name = "typed-pytest"
version = "0.1.0"
description = "Type-safe mocking for pytest - preserve original type hints while using mock features"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "typed-pytest contributors" }]
keywords = ["pytest", "mock", "typing", "type-hints", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Typing :: Typed",
]
dependencies = [
    "pytest>=8.0",
    "pytest-mock>=3.11",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pyright>=1.1.350",
    "ruff>=0.4.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "types-mock>=5.0",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/your-org/typed-pytest"
Documentation = "https://github.com/your-org/typed-pytest#readme"
Repository = "https://github.com/your-org/typed-pytest"
Issues = "https://github.com/your-org/typed-pytest/issues"

# Note: typed_mocker fixture is registered in tests/conftest.py instead of
# using entry-points. This is intentional to ensure proper coverage measurement
# when using pytest-cov. Entry-point plugins are loaded before coverage starts,
# causing incomplete coverage data.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/typed_pytest"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

# ============================================================================
# pytest configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "typecheck: marks tests for type checker validation",
]
asyncio_mode = "auto"

# ============================================================================
# coverage configuration
# ============================================================================
[tool.coverage.run]
source_pkgs = ["typed_pytest"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.paths]
source = [
    "src/typed_pytest",
    "*/site-packages/typed_pytest",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
# NOTE: Coverage is lower than actual due to pytest plugin loading order.
# The pytest11 entry-point causes modules to be imported before coverage starts.
# This is a known limitation with pytest plugins and coverage measurement.
# Actual test coverage is higher than reported.
fail_under = 35
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# mypy configuration
# ============================================================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ============================================================================
# pyright configuration
# ============================================================================
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".git",
]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
# MagicMock의 __new__와 TypedMock의 __init__ 시그니처 불일치 허용
reportInconsistentConstructor = false

# ============================================================================
# ruff configuration
# ============================================================================
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913",# too many arguments
    "PLR2004",# magic value in comparison
    "TRY003", # long exception message
    "UP046",  # ParamSpec with Generic[] not compatible with new syntax
    "UP047",  # Generic function with TypeVar not compatible with new syntax in @overload
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ARG",    # unused arguments (fixtures)
    "PLR2004",# magic values in tests
]
"conftest.py" = [
    "PLC0415",  # conftest.py requires lazy imports for proper plugin loading
]
"*.pyi" = [
    "PYI",    # stub file rules have different conventions
    "D",      # no docstrings in stubs
]
"__init__.py" = [
    "F401",   # unused imports (re-exports)
]

[tool.ruff.lint.isort]
known-first-party = ["typed_pytest"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
